[gd_scene load_steps=2 format=2]

[ext_resource path="res://gameplay/box_generator/box_generator.gd" type="Script" id=1]

[node name="box_generator" type="Node2D"]
script = ExtResource( 1 )

[node name="boxes" type="Node2D" parent="."]

[node name="respawn_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="respawn_positions" type="Node2D" parent="."]

[node name="top_respawn_position" type="Position2D" parent="respawn_positions"]
position = Vector2( 992, -112 )

[node name="left_respawn_position" type="Position2D" parent="respawn_positions"]
position = Vector2( -128, 472 )

[node name="right_respawn_position" type="Position2D" parent="respawn_positions"]
position = Vector2( 2016, 472 )

[connection signal="timeout" from="respawn_timer" to="." method="_on_respawn_timer_timeout"]
